added links to the images in my portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,15 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.google.com"><img src="./assets/images/1.jpg" alt="" width="100%" height="225"></a>
+            <a href="https://www.intutorly.org/"><img src="./assets/images/benten.png" alt="ben" width="100%" height="225"></a>
+            <div class="card-body">
+              <p class="card-text">This is a website that, I designed for a client that wanted to make a website that features homeschooling for students.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <a href="https://www.niaf.org"><img src="./assets/images/italian.png" alt="italian" width="100%" height="225"></a>
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -75,7 +83,7 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.google.com"><img src="./assets/images/1.jpg" alt="" width="100%" height="225"></a>
+            <a href="https://www.basilinna.com"><img src="./assets/images/desert.png" alt="basilinna" width="100%" height="225"></a>
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -83,7 +91,7 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.google.com"><img src="./assets/images/1.jpg" alt="" width="100%" height="225"></a>
+            <a href="https://www.corporatecarworldwide.com"><img src="./assets/images/benz.png" alt="benz" width="100%" height="225"></a>
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -91,7 +99,7 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.google.com"><img src="./assets/images/1.jpg" alt="" width="100%" height="225"></a>
+            <a href="https://www.ityconsulting.com"><img src="./assets/images/machine.png" alt="machine" width="100%" height="225"></a>
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
@@ -99,17 +107,9 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.google.com"><img src="./assets/images/1.jpg" alt="" width="100%" height="225"></a>
+            <a href="https://www.miraclesinthecity.com"><img src="./assets/images/girl.png" alt="girl" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <a href="https://www.google.com"><img src="./assets/images/1.jpg" alt="" width="100%" height="225"></a>
-            <div class="card-body">
-              <p class="card-text">This is a website that, I designed for a client that wanted to make a website that features homeschooling for students.  </p>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, suscipit? Ea autem rem, officiis asperiores aperiam omnis voluptatem exercitationem illum?</p>
               <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>     
