changed the backround image for my first page html document and added more images had a hard time choosing one for the firt page the landing page

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     }
 
     body {
-      background: url("assets/images/1.jpg") !important;
+      background: url("assets/images/timmy.jpg") !important;
     }
 
   
       #welcome{
-           color: black;
+           color:red;
            margin-bottom: 10px;
            padding: auto;
            border: auto;
