--- a/portfolio.html
+++ b/portfolio.html
@@ -77,15 +77,15 @@
           <div class="card mb-4 shadow-sm">
             <a href="https://www.niaf.org"><img src="./assets/images/italian.png" alt="italian" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Have to represent the Italian culture</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.basilinna.com"><img src="./assets/images/desert.png" alt="basilinna" width="100%" height="225"></a>
+            <a href="https://www.basilinna.com"><img src="./assets/images/france.png" alt="basilinna" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">I just love france</p>
             </div>
           </div>
         </div>
@@ -93,7 +93,7 @@
           <div class="card mb-4 shadow-sm">
             <a href="https://www.corporatecarworldwide.com"><img src="./assets/images/benz.png" alt="benz" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Don't you just like driving nice cars?!</p>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
           <div class="card mb-4 shadow-sm">
             <a href="https://www.ityconsulting.com"><img src="./assets/images/machine.png" alt="machine" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">A website made for business consulting</p>
             </div>
           </div>
         </div>
@@ -109,7 +109,7 @@
           <div class="card mb-4 shadow-sm">
             <a href="https://www.miraclesinthecity.com"><img src="./assets/images/girl.png" alt="girl" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, suscipit? Ea autem rem, officiis asperiores aperiam omnis voluptatem exercitationem illum?</p>
+              <p class="card-text">Womens fasion and beauty!</p>
               <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>     
