changed the images and made dummy links instead of actual links for example purposes

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,12 +46,9 @@
         </div>
       </div>
     </div>
-  </div>
-  
+  </div> 
 </header>
-
 <main role="main">
-
   <section class="jumbotron text-center">
     <div class="container">
       <h1>Portfolio</h1>
@@ -61,55 +58,60 @@
       </p>
     </div>
   </section>
-
   <div class="album py-5 bg-light">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.intutorly.org/"><img src="./assets/images/benten.png" alt="ben" width="100%" height="225"></a>
+            <a href="#"><img src="./assets/images/timmy.jpg" alt="beachwebsite" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">This is a website that, I designed for a client that wanted to make a website that features homeschooling for students.</p>
+              <h3>Beach Website</h3>
+              <p class="card-text">My client really likes going to the beach and wanted a website that he can show his family and friends the different beaches he visits througout the United States.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.niaf.org"><img src="./assets/images/italian.png" alt="italian" width="100%" height="225"></a>
+            <a href="#"><img src="./assets/images/wassup.jpg" alt="skywebsite" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">Have to represent the Italian culture</p>
+              <h3>Sky Website</h3>
+              <p class="card-text">I wanted to make a gallary type of website that depics nothing but beautiful skies!</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.basilinna.com"><img src="./assets/images/france.png" alt="basilinna" width="100%" height="225"></a>
+            <a href="#"><img src="./assets/images/diego.jpg" alt="austronomy" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">I just love france</p>
+              <h3>Austronomy Website</h3>
+              <p class="card-text">I'm into Astronomy and made a website to inform people further about planets and stars in our galaxy.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.corporatecarworldwide.com"><img src="./assets/images/benz.png" alt="benz" width="100%" height="225"></a>
+            <a href="#"><img src="./assets/images/halo.jpg" alt="panama" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">Don't you just like driving nice cars?!</p>
+              <h3>Panama Website</h3>
+              <p class="card-text">This is an area in panama that I traveled to and I really liked the place so I had to make a website showing the scenery and foods.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.ityconsulting.com"><img src="./assets/images/machine.png" alt="machine" width="100%" height="225"></a>
+            <a href="#"><img src="./assets/images/download.jpeg" alt="arlington,virginia" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">A website made for business consulting</p>
+              <h3>Arlington, Virginia Website</h3>
+              <p class="card-text"></p>I made this website as like a tour guide with pics and videos and maps showing where I come from!</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <a href="https://www.miraclesinthecity.com"><img src="./assets/images/girl.png" alt="girl" width="100%" height="225"></a>
+            <a href="#"><img src="./assets/images/apple.jpg" alt="artmuseums" width="100%" height="225"></a>
             <div class="card-body">
-              <p class="card-text">Womens fasion and beauty!</p>
+              <h2>Art Museums Website</h2>
+              <p class="card-text">This is a website that only depics artwork with different paintings and drawing from different artist all over the world</p>
               <div class="d-flex justify-content-between align-items-center">
             </div>
           </div>     
