--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <footer class="mastfoot mt-auto">
 
       <div class="inner">
-        <a href="#">Yassin Elhilo</a>
+        <a href="#">Yassin Elhilo.</a>
       </div>
     </footer>
   </div>
