--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
     </main>
 
-    <footer class="mastfoot mt-auto">
-
-      <div class="inner">
-        <a href="#">Yassin Elhilo.</a>
-      </div>
-    </footer>
+    
+<footer class="page-footer font-small blue">
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="#"> Yasin Elhilo</a>
+  </div>
+</footer>
   </div>
 </body>
 
