--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     </main>
 
-    
+   <!-- This is the footer --> 
 <footer class="page-footer font-small blue">
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
     <a href="#"> Yasin Elhilo</a>
